--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,22 @@
     <string name="app_name">Barter Books</string>
     <string name="title_activity_signup">SignupActivity</string>
     <string-array name="nav_drawer_array">
-        <item name ="home">Home</item>
-        <item name = "Signup">Signup</item>
-        <item name = "Books">Books</item>
+        <item name="home">Home</item>
+        <item name="Signup">Signup</item>
+        <item name="Books">Books</item>
     </string-array>
+    <string name="title_activity_login">Enter Book Info</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
 </resources>
