Created new ListAdapter and New xml style sheets for this list view. Added basic parse controller to post to database.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
         <item name="Signup">Signup</item>
         <item name="Books">Books</item>
         <item name="Search">Search</item>
-        <item name ="Profile">My Profile</item>
+        <item name="Profile">My Profile</item>
     </string-array>
     <string name="title_activity_login">Enter Book Info</string>
     <string name="title_activity_search_form">Search For A Book</string>
@@ -25,5 +25,6 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="title_activity_list_adapter">ListAdapter</string>
 
 </resources>
