--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,14 +11,14 @@
 
     <string-array name="local_isbn_array">
         <item>9781118102282</item>
-        <item>9781119067900</item>
-        <item>9781118983843</item>
-        <item>9780321884497</item>
-        <item>9780071808552</item>
-        <item>9780321776419</item>
-        <item>9780132149181</item>
-        <item>9780131395312</item>
-        <item>9780073229720</item>
+        <!--<item>9781119067900</item>-->
+        <!--<item>9781118983843</item>-->
+        <!--<item>9780321884497</item>-->
+        <!--<item>9780071808552</item>-->
+        <!--<item>9780321776419</item>-->
+        <!--<item>9780132149181</item>-->
+        <!--<item>9780131395312</item>-->
+        <!--<item>9780073229720</item>-->
     </string-array>
 
     <string name="title_activity_login">Enter Book Info</string>
